--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
   <meta charset="UTF-8" />
-  <title>3-way User Study</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>三视频评分实验</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="app">
-    <h1>用户评分任务</h1>
+    <h1>三视频评分任务</h1>
     <div id="video-block">
       <h2 id="video-label">视频 1 / 3</h2>
       <video id="media" width="640" controls></video>
     </div>
+
     <div id="rating-form-container">
       <form id="rating-form">
-        <p>请对以下维度进行评分（1–5 分）：</p>
+        <p>请对当前视频进行评分（1–5 分）：</p>
         <label>音频质量：
           <select name="audioQuality" required>
             <option value="">请选择</option>
@@ -43,8 +45,9 @@
         <button type="submit">提交评分</button>
       </form>
     </div>
+
     <div id="final" style="display:none;">
-      <p>全部评分完成，点击按钮下载结果：</p>
+      <p>全部评分已完成，点击下载评分数据：</p>
       <button onclick="downloadCSV()">下载CSV</button>
     </div>
   </div>
