--- a/index.html
+++ b/index.html
@@ -1,56 +1,43 @@
-<!DOCTYPE html>
-<html lang="zh">
-<head>
-  <meta charset="UTF-8">
-  <title>三视频并排评分</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>主观评分问卷：三视频并排展示</h1>
-  <div id="group-label">第 1 组</div>
+<h1>三视频评分实验</h1>
 
-  <div id="video-container">
-    <div class="video-block" id="video0">
-      <video width="320" controls></video>
-      <form class="rating-form">
-        <h3>视频 1</h3>
-        <label>音频质量：<select name="audioQuality" required></select></label>
-        <label>空间一致性：<select name="spatialConsistency" required></select></label>
-        <label>语义一致性：<select name="semanticConsistency" required></select></label>
-        <label>时间一致性：<select name="temporalConsistency" required></select></label>
-      </form>
-    </div>
+<!-- 视频横排 -->
+<div class="video-row">
+  <video id="video0" width="320" controls></video>
+  <video id="video1" width="320" controls></video>
+  <video id="video2" width="320" controls></video>
+</div>
 
-    <div class="video-block" id="video1">
-      <video width="320" controls></video>
-      <form class="rating-form">
-        <h3>视频 2</h3>
-        <label>音频质量：<select name="audioQuality" required></select></label>
-        <label>空间一致性：<select name="spatialConsistency" required></select></label>
-        <label>语义一致性：<select name="semanticConsistency" required></select></label>
-        <label>时间一致性：<select name="temporalConsistency" required></select></label>
-      </form>
-    </div>
-
-    <div class="video-block" id="video2">
-      <video width="320" controls></video>
-      <form class="rating-form">
-        <h3>视频 3</h3>
-        <label>音频质量：<select name="audioQuality" required></select></label>
-        <label>空间一致性：<select name="spatialConsistency" required></select></label>
-        <label>语义一致性：<select name="semanticConsistency" required></select></label>
-        <label>时间一致性：<select name="temporalConsistency" required></select></label>
-      </form>
-    </div>
+<!-- 评分表：按维度纵排，每行对应一个评分维度，每列对应一个视频 -->
+<form id="rating-form">
+  <div class="rating-row">
+    <label>音频质量：</label>
+    <select name="audioQuality0" required></select>
+    <select name="audioQuality1" required></select>
+    <select name="audioQuality2" required></select>
+  </div>
+  <div class="rating-row">
+    <label>空间一致性：</label>
+    <select name="spatialConsistency0" required></select>
+    <select name="spatialConsistency1" required></select>
+    <select name="spatialConsistency2" required></select>
+  </div>
+  <div class="rating-row">
+    <label>语义一致性：</label>
+    <select name="semanticConsistency0" required></select>
+    <select name="semanticConsistency1" required></select>
+    <select name="semanticConsistency2" required></select>
+  </div>
+  <div class="rating-row">
+    <label>时间一致性：</label>
+    <select name="temporalConsistency0" required></select>
+    <select name="temporalConsistency1" required></select>
+    <select name="temporalConsistency2" required></select>
   </div>
 
-  <button id="next-button">提交当前组评分</button>
+  <button type="submit">提交当前组评分</button>
+</form>
 
-  <div id="complete" style="display:none;">
-    <h3>感谢您的参与！</h3>
-    <button onclick="downloadCSV()">下载评分结果</button>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
+<div id="complete" style="display:none;">
+  <h3>评分完成，点击下载结果：</h3>
+  <button onclick="downloadCSV()">下载CSV</button>
+</div>
