--- a/index.html
+++ b/index.html
@@ -1,18 +1,56 @@
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+  <meta charset="UTF-8">
+  <title>多题三视频主观评分</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>三视频主观评分问卷</h1>
+  <div id="question-counter"></div>
+
+  <!-- 视频并排显示 -->
+  <div class="video-row">
+    <video id="video0" width="320" controls></video>
+    <video id="video1" width="320" controls></video>
+    <video id="video2" width="320" controls></video>
+  </div>
+
+  <!-- 三个评分块 -->
+  <form id="rating-form">
+
 <div class="video-rating-block">
   <h3>视频 1</h3>
-  <label>音频质量：
-    <select name="audioQuality0" required></select>
-  </label>
-  <label>空间一致性：
-    <select name="spatialConsistency0" required></select>
-  </label>
-  <label>语义一致性：
-    <select name="semanticConsistency0" required></select>
-  </label>
-  <label>时间一致性：
-    <select name="temporalConsistency0" required></select>
-  </label>
-  <label>用户偏好：
-    <select name="userPreference0" required></select>
-  </label>
+  <div class="question">音频质量：<label><input type="radio" name="audioQuality0" value="1" required> 1</label> <label><input type="radio" name="audioQuality0" value="2" required> 2</label> <label><input type="radio" name="audioQuality0" value="3" required> 3</label> <label><input type="radio" name="audioQuality0" value="4" required> 4</label> <label><input type="radio" name="audioQuality0" value="5" required> 5</label></div>
+  <div class="question">空间一致性：<label><input type="radio" name="spatialConsistency0" value="1" required> 1</label> <label><input type="radio" name="spatialConsistency0" value="2" required> 2</label> <label><input type="radio" name="spatialConsistency0" value="3" required> 3</label> <label><input type="radio" name="spatialConsistency0" value="4" required> 4</label> <label><input type="radio" name="spatialConsistency0" value="5" required> 5</label></div>
+  <div class="question">语义一致性：<label><input type="radio" name="semanticConsistency0" value="1" required> 1</label> <label><input type="radio" name="semanticConsistency0" value="2" required> 2</label> <label><input type="radio" name="semanticConsistency0" value="3" required> 3</label> <label><input type="radio" name="semanticConsistency0" value="4" required> 4</label> <label><input type="radio" name="semanticConsistency0" value="5" required> 5</label></div>
+  <div class="question">时间一致性：<label><input type="radio" name="temporalConsistency0" value="1" required> 1</label> <label><input type="radio" name="temporalConsistency0" value="2" required> 2</label> <label><input type="radio" name="temporalConsistency0" value="3" required> 3</label> <label><input type="radio" name="temporalConsistency0" value="4" required> 4</label> <label><input type="radio" name="temporalConsistency0" value="5" required> 5</label></div>
+  <div class="question">用户偏好：<label><input type="radio" name="userPreference0" value="1" required> 1</label> <label><input type="radio" name="userPreference0" value="2" required> 2</label> <label><input type="radio" name="userPreference0" value="3" required> 3</label> <label><input type="radio" name="userPreference0" value="4" required> 4</label> <label><input type="radio" name="userPreference0" value="5" required> 5</label></div>
 </div>
+
+<div class="video-rating-block">
+  <h3>视频 2</h3>
+  <div class="question">音频质量：<label><input type="radio" name="audioQuality1" value="1" required> 1</label> <label><input type="radio" name="audioQuality1" value="2" required> 2</label> <label><input type="radio" name="audioQuality1" value="3" required> 3</label> <label><input type="radio" name="audioQuality1" value="4" required> 4</label> <label><input type="radio" name="audioQuality1" value="5" required> 5</label></div>
+  <div class="question">空间一致性：<label><input type="radio" name="spatialConsistency1" value="1" required> 1</label> <label><input type="radio" name="spatialConsistency1" value="2" required> 2</label> <label><input type="radio" name="spatialConsistency1" value="3" required> 3</label> <label><input type="radio" name="spatialConsistency1" value="4" required> 4</label> <label><input type="radio" name="spatialConsistency1" value="5" required> 5</label></div>
+  <div class="question">语义一致性：<label><input type="radio" name="semanticConsistency1" value="1" required> 1</label> <label><input type="radio" name="semanticConsistency1" value="2" required> 2</label> <label><input type="radio" name="semanticConsistency1" value="3" required> 3</label> <label><input type="radio" name="semanticConsistency1" value="4" required> 4</label> <label><input type="radio" name="semanticConsistency1" value="5" required> 5</label></div>
+  <div class="question">时间一致性：<label><input type="radio" name="temporalConsistency1" value="1" required> 1</label> <label><input type="radio" name="temporalConsistency1" value="2" required> 2</label> <label><input type="radio" name="temporalConsistency1" value="3" required> 3</label> <label><input type="radio" name="temporalConsistency1" value="4" required> 4</label> <label><input type="radio" name="temporalConsistency1" value="5" required> 5</label></div>
+  <div class="question">用户偏好：<label><input type="radio" name="userPreference1" value="1" required> 1</label> <label><input type="radio" name="userPreference1" value="2" required> 2</label> <label><input type="radio" name="userPreference1" value="3" required> 3</label> <label><input type="radio" name="userPreference1" value="4" required> 4</label> <label><input type="radio" name="userPreference1" value="5" required> 5</label></div>
+</div>
+
+<div class="video-rating-block">
+  <h3>视频 3</h3>
+  <div class="question">音频质量：<label><input type="radio" name="audioQuality2" value="1" required> 1</label> <label><input type="radio" name="audioQuality2" value="2" required> 2</label> <label><input type="radio" name="audioQuality2" value="3" required> 3</label> <label><input type="radio" name="audioQuality2" value="4" required> 4</label> <label><input type="radio" name="audioQuality2" value="5" required> 5</label></div>
+  <div class="question">空间一致性：<label><input type="radio" name="spatialConsistency2" value="1" required> 1</label> <label><input type="radio" name="spatialConsistency2" value="2" required> 2</label> <label><input type="radio" name="spatialConsistency2" value="3" required> 3</label> <label><input type="radio" name="spatialConsistency2" value="4" required> 4</label> <label><input type="radio" name="spatialConsistency2" value="5" required> 5</label></div>
+  <div class="question">语义一致性：<label><input type="radio" name="semanticConsistency2" value="1" required> 1</label> <label><input type="radio" name="semanticConsistency2" value="2" required> 2</label> <label><input type="radio" name="semanticConsistency2" value="3" required> 3</label> <label><input type="radio" name="semanticConsistency2" value="4" required> 4</label> <label><input type="radio" name="semanticConsistency2" value="5" required> 5</label></div>
+  <div class="question">时间一致性：<label><input type="radio" name="temporalConsistency2" value="1" required> 1</label> <label><input type="radio" name="temporalConsistency2" value="2" required> 2</label> <label><input type="radio" name="temporalConsistency2" value="3" required> 3</label> <label><input type="radio" name="temporalConsistency2" value="4" required> 4</label> <label><input type="radio" name="temporalConsistency2" value="5" required> 5</label></div>
+  <div class="question">用户偏好：<label><input type="radio" name="userPreference2" value="1" required> 1</label> <label><input type="radio" name="userPreference2" value="2" required> 2</label> <label><input type="radio" name="userPreference2" value="3" required> 3</label> <label><input type="radio" name="userPreference2" value="4" required> 4</label> <label><input type="radio" name="userPreference2" value="5" required> 5</label></div>
+</div>
+  </form>
+
+  <div id="complete" style="display:none;">
+    <p>评分完成！点击下载：</p>
+    <button onclick="downloadCSV()">下载 CSV</button>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
