--- a/index.html
+++ b/index.html
@@ -2,49 +2,48 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>多题三视频主观评分</title>
+  <title>32题三视频主观评分</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>三视频主观评分问卷</h1>
   <div id="question-counter"></div>
 
-  <!-- 视频并排显示 -->
   <div class="video-row">
     <video id="video0" width="320" controls></video>
     <video id="video1" width="320" controls></video>
     <video id="video2" width="320" controls></video>
   </div>
 
-  <!-- 三个评分块 -->
   <form id="rating-form">
+    <div class="video-rating-block">
+      <h3>视频 1</h3>
+      <div class="question">音频质量：<span class="radio-group" id="audioQuality0"></span></div>
+      <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency0"></span></div>
+      <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency0"></span></div>
+      <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency0"></span></div>
+      <div class="question">用户偏好：<span class="radio-group" id="userPreference0"></span></div>
+    </div>
 
-<div class="video-rating-block">
-  <h3>视频 1</h3>
-  <div class="question">音频质量：<label><input type="radio" name="audioQuality0" value="1" required> 1</label> <label><input type="radio" name="audioQuality0" value="2" required> 2</label> <label><input type="radio" name="audioQuality0" value="3" required> 3</label> <label><input type="radio" name="audioQuality0" value="4" required> 4</label> <label><input type="radio" name="audioQuality0" value="5" required> 5</label></div>
-  <div class="question">空间一致性：<label><input type="radio" name="spatialConsistency0" value="1" required> 1</label> <label><input type="radio" name="spatialConsistency0" value="2" required> 2</label> <label><input type="radio" name="spatialConsistency0" value="3" required> 3</label> <label><input type="radio" name="spatialConsistency0" value="4" required> 4</label> <label><input type="radio" name="spatialConsistency0" value="5" required> 5</label></div>
-  <div class="question">语义一致性：<label><input type="radio" name="semanticConsistency0" value="1" required> 1</label> <label><input type="radio" name="semanticConsistency0" value="2" required> 2</label> <label><input type="radio" name="semanticConsistency0" value="3" required> 3</label> <label><input type="radio" name="semanticConsistency0" value="4" required> 4</label> <label><input type="radio" name="semanticConsistency0" value="5" required> 5</label></div>
-  <div class="question">时间一致性：<label><input type="radio" name="temporalConsistency0" value="1" required> 1</label> <label><input type="radio" name="temporalConsistency0" value="2" required> 2</label> <label><input type="radio" name="temporalConsistency0" value="3" required> 3</label> <label><input type="radio" name="temporalConsistency0" value="4" required> 4</label> <label><input type="radio" name="temporalConsistency0" value="5" required> 5</label></div>
-  <div class="question">用户偏好：<label><input type="radio" name="userPreference0" value="1" required> 1</label> <label><input type="radio" name="userPreference0" value="2" required> 2</label> <label><input type="radio" name="userPreference0" value="3" required> 3</label> <label><input type="radio" name="userPreference0" value="4" required> 4</label> <label><input type="radio" name="userPreference0" value="5" required> 5</label></div>
-</div>
+    <div class="video-rating-block">
+      <h3>视频 2</h3>
+      <div class="question">音频质量：<span class="radio-group" id="audioQuality1"></span></div>
+      <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency1"></span></div>
+      <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency1"></span></div>
+      <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency1"></span></div>
+      <div class="question">用户偏好：<span class="radio-group" id="userPreference1"></span></div>
+    </div>
 
-<div class="video-rating-block">
-  <h3>视频 2</h3>
-  <div class="question">音频质量：<label><input type="radio" name="audioQuality1" value="1" required> 1</label> <label><input type="radio" name="audioQuality1" value="2" required> 2</label> <label><input type="radio" name="audioQuality1" value="3" required> 3</label> <label><input type="radio" name="audioQuality1" value="4" required> 4</label> <label><input type="radio" name="audioQuality1" value="5" required> 5</label></div>
-  <div class="question">空间一致性：<label><input type="radio" name="spatialConsistency1" value="1" required> 1</label> <label><input type="radio" name="spatialConsistency1" value="2" required> 2</label> <label><input type="radio" name="spatialConsistency1" value="3" required> 3</label> <label><input type="radio" name="spatialConsistency1" value="4" required> 4</label> <label><input type="radio" name="spatialConsistency1" value="5" required> 5</label></div>
-  <div class="question">语义一致性：<label><input type="radio" name="semanticConsistency1" value="1" required> 1</label> <label><input type="radio" name="semanticConsistency1" value="2" required> 2</label> <label><input type="radio" name="semanticConsistency1" value="3" required> 3</label> <label><input type="radio" name="semanticConsistency1" value="4" required> 4</label> <label><input type="radio" name="semanticConsistency1" value="5" required> 5</label></div>
-  <div class="question">时间一致性：<label><input type="radio" name="temporalConsistency1" value="1" required> 1</label> <label><input type="radio" name="temporalConsistency1" value="2" required> 2</label> <label><input type="radio" name="temporalConsistency1" value="3" required> 3</label> <label><input type="radio" name="temporalConsistency1" value="4" required> 4</label> <label><input type="radio" name="temporalConsistency1" value="5" required> 5</label></div>
-  <div class="question">用户偏好：<label><input type="radio" name="userPreference1" value="1" required> 1</label> <label><input type="radio" name="userPreference1" value="2" required> 2</label> <label><input type="radio" name="userPreference1" value="3" required> 3</label> <label><input type="radio" name="userPreference1" value="4" required> 4</label> <label><input type="radio" name="userPreference1" value="5" required> 5</label></div>
-</div>
+    <div class="video-rating-block">
+      <h3>视频 3</h3>
+      <div class="question">音频质量：<span class="radio-group" id="audioQuality2"></span></div>
+      <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency2"></span></div>
+      <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency2"></span></div>
+      <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency2"></span></div>
+      <div class="question">用户偏好：<span class="radio-group" id="userPreference2"></span></div>
+    </div>
 
-<div class="video-rating-block">
-  <h3>视频 3</h3>
-  <div class="question">音频质量：<label><input type="radio" name="audioQuality2" value="1" required> 1</label> <label><input type="radio" name="audioQuality2" value="2" required> 2</label> <label><input type="radio" name="audioQuality2" value="3" required> 3</label> <label><input type="radio" name="audioQuality2" value="4" required> 4</label> <label><input type="radio" name="audioQuality2" value="5" required> 5</label></div>
-  <div class="question">空间一致性：<label><input type="radio" name="spatialConsistency2" value="1" required> 1</label> <label><input type="radio" name="spatialConsistency2" value="2" required> 2</label> <label><input type="radio" name="spatialConsistency2" value="3" required> 3</label> <label><input type="radio" name="spatialConsistency2" value="4" required> 4</label> <label><input type="radio" name="spatialConsistency2" value="5" required> 5</label></div>
-  <div class="question">语义一致性：<label><input type="radio" name="semanticConsistency2" value="1" required> 1</label> <label><input type="radio" name="semanticConsistency2" value="2" required> 2</label> <label><input type="radio" name="semanticConsistency2" value="3" required> 3</label> <label><input type="radio" name="semanticConsistency2" value="4" required> 4</label> <label><input type="radio" name="semanticConsistency2" value="5" required> 5</label></div>
-  <div class="question">时间一致性：<label><input type="radio" name="temporalConsistency2" value="1" required> 1</label> <label><input type="radio" name="temporalConsistency2" value="2" required> 2</label> <label><input type="radio" name="temporalConsistency2" value="3" required> 3</label> <label><input type="radio" name="temporalConsistency2" value="4" required> 4</label> <label><input type="radio" name="temporalConsistency2" value="5" required> 5</label></div>
-  <div class="question">用户偏好：<label><input type="radio" name="userPreference2" value="1" required> 1</label> <label><input type="radio" name="userPreference2" value="2" required> 2</label> <label><input type="radio" name="userPreference2" value="3" required> 3</label> <label><input type="radio" name="userPreference2" value="4" required> 4</label> <label><input type="radio" name="userPreference2" value="5" required> 5</label></div>
-</div>
+    <button type="submit">下一题</button>
   </form>
 
   <div id="complete" style="display:none;">
