--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <form id="rating-form">
     <div class="video-rating-block">
       <h3>视频 1</h3>
-<!--       <div class="question">音频质量：<span class="radio-group" id="audioQuality0"></span></div> -->
-      <div class="question">音频质量：
+      <div class="question">音频质量：<span class="radio-group" id="audioQuality0"></span></div>
+<!--       <div class="question">音频质量：
         <label><input type="radio" name="audioQuality0" value="1"> 1</label>
         <label><input type="radio" name="audioQuality0" value="2"> 2</label>
         <label><input type="radio" name="audioQuality0" value="3"> 3</label>
         <label><input type="radio" name="audioQuality0" value="4"> 4</label>
         <label><input type="radio" name="audioQuality0" value="5"> 5</label>
-      </div>
+      </div> -->
       <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency0"></span></div>
       <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency0"></span></div>
       <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency0"></span></div>
