--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <div id="question-counter"></div>
 
   <div class="video-row">
-    <video id="video0" width="480" controls></video>
+<!--     <video id="video0" width="480" controls></video> -->
+    <video id="video0" controls></video>
     <video id="video1" width="480" controls></video>
     <video id="video2" width="480" controls></video>
   </div>
