--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
     </div>
   </div>
 
-  <button type="submit">下一题</button>
+  <form id="rating-form">
+    <button type="button" onclick="nextQuestion()">下一题</button>
+  </form>
 
   <div id="complete" style="display:none;">
     <p>评分完成！点击下载：</p>
