--- a/index.html
+++ b/index.html
@@ -10,54 +10,40 @@
   <div id="question-counter"></div>
 
   <div class="video-row">
-    <div class="video-rating-block">
-      <div class="video-container">
-        <video id="video0" width="320" controls></video>
-        <p id="title0">视频 1</p>
-      </div>
-      <div class="video-question">
-        <h3>视频 1</h3>
-        <div class="question">音频质量：<span class="radio-group" id="audioQuality0"></span></div>
-        <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency0"></span></div>
-        <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency0"></span></div>
-        <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency0"></span></div>
-        <div class="question">用户偏好：<span class="radio-group" id="userPreference0"></span></div>
-      </div>
-    </div>
-
-    <div class="video-rating-block">
-      <div class="video-container">
-        <video id="video1" width="320" controls></video>
-        <p id="title1">视频 2</p>
-      </div>
-      <div class="video-question">
-        <h3>视频 2</h3>
-        <div class="question">音频质量：<span class="radio-group" id="audioQuality1"></span></div>
-        <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency1"></span></div>
-        <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency1"></span></div>
-        <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency1"></span></div>
-        <div class="question">用户偏好：<span class="radio-group" id="userPreference1"></span></div>
-      </div>
-    </div>
-
-    <div class="video-rating-block">
-      <div class="video-container">
-        <video id="video2" width="320" controls></video>
-        <p id="title2">视频 3</p>
-      </div>
-      <div class="video-question">
-        <h3>视频 3</h3>
-        <div class="question">音频质量：<span class="radio-group" id="audioQuality2"></span></div>
-        <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency2"></span></div>
-        <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency2"></span></div>
-        <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency2"></span></div>
-        <div class="question">用户偏好：<span class="radio-group" id="userPreference2"></span></div>
-      </div>
-    </div>
+    <video id="video0" width="320" controls></video>
+    <video id="video1" width="320" controls></video>
+    <video id="video2" width="320" controls></video>
   </div>
 
   <form id="rating-form">
-    <button type="button" onclick="nextQuestion()">下一题</button>
+    <div class="video-rating-block">
+      <h3>视频 1</h3>
+      <div class="question">音频质量：<span class="radio-group" id="audioQuality0"></span></div>
+      <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency0"></span></div>
+      <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency0"></span></div>
+      <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency0"></span></div>
+      <div class="question">用户偏好：<span class="radio-group" id="userPreference0"></span></div>
+    </div>
+
+    <div class="video-rating-block">
+      <h3>视频 2</h3>
+      <div class="question">音频质量：<span class="radio-group" id="audioQuality1"></span></div>
+      <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency1"></span></div>
+      <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency1"></span></div>
+      <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency1"></span></div>
+      <div class="question">用户偏好：<span class="radio-group" id="userPreference1"></span></div>
+    </div>
+
+    <div class="video-rating-block">
+      <h3>视频 3</h3>
+      <div class="question">音频质量：<span class="radio-group" id="audioQuality2"></span></div>
+      <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency2"></span></div>
+      <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency2"></span></div>
+      <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency2"></span></div>
+      <div class="question">用户偏好：<span class="radio-group" id="userPreference2"></span></div>
+    </div>
+
+    <button type="submit">下一题</button>
   </form>
 
   <div id="complete" style="display:none;">
