--- a/index.html
+++ b/index.html
@@ -6,50 +6,61 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>三视频主观评分问卷</h1>
-  <div id="question-counter"></div>
 
-  <div class="video-row">
-    <video id="video0" width="320" controls></video>
-    <video id="video1" width="320" controls></video>
-    <video id="video2" width="320" controls></video>
+  <!-- Cover Page -->
+  <div id="cover-page">
+    <h1>XXXXX</h1>
+    <button id="startButton">开始问卷</button>
   </div>
 
-  <form id="rating-form">
-    <div class="video-rating-block">
-      <h3>视频 1</h3>
-      <div class="question">音频质量：<span class="radio-group" id="audioQuality0"></span></div>
-      <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency0"></span></div>
-      <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency0"></span></div>
-      <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency0"></span></div>
-      <div class="question">用户偏好：<span class="radio-group" id="userPreference0"></span></div>
+  <!-- Main Questionnaire -->
+  <div id="questionnaire" style="display:none;">
+    <h1>三视频主观评分问卷</h1>
+    <div id="question-counter"></div>
+
+    <div class="video-row">
+      <video id="video0" width="320" controls></video>
+      <video id="video1" width="320" controls></video>
+      <video id="video2" width="320" controls></video>
     </div>
 
-    <div class="video-rating-block">
-      <h3>视频 2</h3>
-      <div class="question">音频质量：<span class="radio-group" id="audioQuality1"></span></div>
-      <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency1"></span></div>
-      <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency1"></span></div>
-      <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency1"></span></div>
-      <div class="question">用户偏好：<span class="radio-group" id="userPreference1"></span></div>
+    <form id="rating-form">
+      <div class="video-rating-block">
+        <h3>视频 1</h3>
+        <div class="question">音频质量：<span class="radio-group" id="audioQuality0"></span></div>
+        <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency0"></span></div>
+        <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency0"></span></div>
+        <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency0"></span></div>
+        <div class="question">用户偏好：<span class="radio-group" id="userPreference0"></span></div>
+      </div>
+
+      <div class="video-rating-block">
+        <h3>视频 2</h3>
+        <div class="question">音频质量：<span class="radio-group" id="audioQuality1"></span></div>
+        <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency1"></span></div>
+        <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency1"></span></div>
+        <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency1"></span></div>
+        <div class="question">用户偏好：<span class="radio-group" id="userPreference1"></span></div>
+      </div>
+
+      <div class="video-rating-block">
+        <h3>视频 3</h3>
+        <div class="question">音频质量：<span class="radio-group" id="audioQuality2"></span></div>
+        <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency2"></span></div>
+        <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency2"></span></div>
+        <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency2"></span></div>
+        <div class="question">用户偏好：<span class="radio-group" id="userPreference2"></span></div>
+      </div>
+
+      <button type="submit">下一题</button>
+    </form>
+
+    <div id="complete" style="display:none;">
+      <p>评分完成！点击下载：</p>
+      <button onclick="downloadCSV()">下载 CSV</button>
     </div>
-
-    <div class="video-rating-block">
-      <h3>视频 3</h3>
-      <div class="question">音频质量：<span class="radio-group" id="audioQuality2"></span></div>
-      <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency2"></span></div>
-      <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency2"></span></div>
-      <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency2"></span></div>
-      <div class="question">用户偏好：<span class="radio-group" id="userPreference2"></span></div>
-    </div>
-
-    <button type="submit">下一题</button>
-  </form>
-
-  <div id="complete" style="display:none;">
-    <p>评分完成！点击下载：</p>
-    <button onclick="downloadCSV()">下载 CSV</button>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
