--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
   <!-- Cover Page -->
   <div id="cover-page">
-    <h1>XXXXX</h1>
+    <h1>三视频主观评分问卷</h1>
+    <p>欢迎参加我们的问卷调查，请根据以下视频内容，进行评分。</p>
+    <p>本问卷旨在评估视频质量，包含音频质量、空间一致性、语义一致性、时间一致性等多个方面。</p>
     <button id="startButton">开始问卷</button>
   </div>
 
