--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>32题三视频主观评分</title>
+  <title>32题视频主观评分</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <!-- Cover Page -->
   <div id="cover-page">
-    <h1>三视频主观评分问卷</h1>
+    <h1>视频主观评分问卷</h1>
     <p>欢迎参加我们的问卷调查，请根据以下视频内容，进行评分。</p>
     <p>本问卷旨在评估视频质量，包含音频质量、空间一致性、语义一致性、时间一致性等多个方面。</p>
     <button id="startButton">开始问卷</button>
@@ -50,6 +50,18 @@
         <video id="video2" width="320" controls></video>
         <div class="video-rating-block">
           <h3>视频 3</h3>
+          <div class="question">音频质量：<span class="radio-group" id="audioQuality2"></span></div>
+          <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency2"></span></div>
+          <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency2"></span></div>
+          <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency2"></span></div>
+          <div class="question">用户偏好：<span class="radio-group" id="userPreference2"></span></div>
+        </div>
+      </div>
+
+      <div class="video-rating-pair">
+        <video id="video2" width="320" controls></video>
+        <div class="video-rating-block">
+          <h3>视频 4</h3>
           <div class="question">音频质量：<span class="radio-group" id="audioQuality2"></span></div>
           <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency2"></span></div>
           <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency2"></span></div>
