--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency1"></span></div>
           <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency1"></span></div>
           <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency1"></span></div>
-          <div class="question">用户偏好：<span class="radio-group" id="userPreference1"></span></div>
+          <div class="question">用户总体满意度：<span class="radio-group" id="userPreference1"></span></div>
         </div>
       </div>
 
@@ -130,7 +130,7 @@
           <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency2"></span></div>
           <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency2"></span></div>
           <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency2"></span></div>
-          <div class="question">用户偏好：<span class="radio-group" id="userPreference2"></span></div>
+          <div class="question">用户总体满意度：<span class="radio-group" id="userPreference2"></span></div>
         </div>
       </div>
 
@@ -143,7 +143,7 @@
           <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency3"></span></div>
           <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency3"></span></div>
           <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency3"></span></div>
-          <div class="question">用户偏好：<span class="radio-group" id="userPreference3"></span></div>
+          <div class="question">用户总体满意度：<span class="radio-group" id="userPreference3"></span></div>
         </div>
       </div>
 
