--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h1>四视频主观评分问卷</h1>
     <div class="rating-criteria-video">
       <strong>🎧 音频质量（Audio Quality）</strong><br>
-      衡量生成音频本身的听感，包括清晰度、自然度、噪声等。<br><br>
+      衡量生成音频本身的听感，包括清晰度、自然度、噪声等。<br>
 
       <strong>🧭 空间一致性（Spatial Consistency）</strong><br>
       衡量音频的空间定位是否与视频中声源位置匹配（如方向、远近、环境感）。<br>
