--- a/index.html
+++ b/index.html
@@ -106,10 +106,6 @@
           <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency0"></span></div>
           <div class="question">用户总体满意度：<span class="radio-group" id="userPreference0"></span></div>
         </div>
-      </div>
-
-      <!-- 视频 2 -->
-      <div class="video-rating-pair">
         <video id="video1" width="320" controls></video>
         <div class="video-rating-block">
           <h3>视频 2</h3>
@@ -120,6 +116,11 @@
           <div class="question">用户总体满意度：<span class="radio-group" id="userPreference1"></span></div>
         </div>
       </div>
+
+      <!-- 视频 2
+      <div class="video-rating-pair">
+        
+      </div> -->
 
       <!-- 视频 3 -->
       <div class="video-rating-pair">
@@ -132,10 +133,6 @@
           <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency2"></span></div>
           <div class="question">用户总体满意度：<span class="radio-group" id="userPreference2"></span></div>
         </div>
-      </div>
-
-      <!-- 视频 4 -->
-      <div class="video-rating-pair">
         <video id="video3" width="320" controls></video>
         <div class="video-rating-block">
           <h3>视频 4</h3>
@@ -146,6 +143,11 @@
           <div class="question">用户总体满意度：<span class="radio-group" id="userPreference3"></span></div>
         </div>
       </div>
+
+      <!-- 视频 4 -->
+      <!-- <div class="video-rating-pair">
+  
+      </div> -->
 
       <button type="submit">下一题</button>
     </form>
