--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
       <strong>🎧 音频质量（Audio Quality）：</strong>
       衡量生成音频本身的听感，包括清晰度、自然度、噪声等。
 
-      <strong>🧭 空间一致性（Spatial Consistency）：</strong><br>
-      衡量音频的空间定位是否与视频中声源位置匹配（如方向、远近、环境感）。
+      <strong>🧭 空间一致性（Spatial Consistency）：</strong>
+      衡量音频的空间定位是否与视频中声源位置匹配（如方向、远近、环境感）。<br>
 
       <strong>🧠 语义一致性（Semantic Consistency）：</strong>
       衡量音频内容是否准确表达视频中的事件或动作语义（如敲门声、说话、狗叫）。
