--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         衡量音频的空间定位是否与视频中声源位置匹配（如方向、远近、环境感）。</p>
 
         <p><strong>🧠 语义一致性（Semantic Consistency）：</strong><br>
-        衡量音频内容是否准确表达视频中的事件或动作语义（如敲门声、说话、狗叫）。</p>
+        衡量音频内容是否准确表达视频中的事件或动作语义（如敲门声、说话、狗叫）new。</p>
       </div>
 
       <div class="vertical-divider"></div>
