--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       衡量音频事件在时间上是否与视频同步，动作与声音是否协调。<br>
 
       <strong>❤️ 用户总体满意度（User Preference）：</strong>
-      衡量用户对整体视听体验的主观喜好程度。
+      衡量用户对整体视听体验的主观喜好程度。new
     </div>
     <br><hr><br>
     <div id="question-counter"></div>
