--- a/index.html
+++ b/index.html
@@ -1,163 +1,17 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>四视频主观评分问卷</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FoleySpace: Vision-Aligned Binaural Spatial Audio Generation</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="container">
+    <h1>FoleySpace: Vision-Aligned Binaural Spatial Audio Generation</h1>
+    <a href="#" class="code-link" target="_blank">[GitHub Code]</a>
 
-  <!-- Cover Page -->
-  <div id="cover-page">
-    <h1>音频主观评分问卷</h1>
-    <p>本问卷设计用于对V2A（视频生成音频）模型所生成音频的整体质量进行主观评估，评价维度包括音频质量、空间一致性、语义一致性、时间一致性和用户总体满意度。</p>
-    <p>为保证评估结果的准确性，请使用耳机并适当增加音量。</p>
-    
-    <h3>下面是评分准则：</h3>
-    <div class="rating-criteria">
-      <strong>🎧 音频质量（Audio Quality）</strong><br>
-      衡量生成音频本身的听感，包括清晰度、自然度、噪声等。
-      <table>
-        <tr><th>分数</th><th>评分标准</th></tr>
-        <tr><td>1分</td><td>音频失真严重，存在杂音、断裂或合成异常，严重影响理解。</td></tr>
-        <tr><td>2分</td><td>存在明显噪声、音色不自然或过度合成痕迹，听感差。</td></tr>
-        <tr><td>3分</td><td>音频基本清晰，有轻微噪声或合成痕迹，尚可接受。</td></tr>
-        <tr><td>4分</td><td>音质较好，自然流畅，仅有少量小缺陷。</td></tr>
-        <tr><td>5分</td><td>音质优秀，清晰自然，无明显缺陷或杂音。</td></tr>
-      </table>
-
-      <strong>🧭 空间一致性（Spatial Consistency）</strong><br>
-      衡量音频的空间定位是否与视频中声源位置匹配（如方向、远近、环境感）。
-      <table>
-        <tr><th>分数</th><th>评分标准</th></tr>
-        <tr><td>1分</td><td>完全不符合视频内容，声源方向混乱或无空间感。</td></tr>
-        <tr><td>2分</td><td>空间定位感弱，声源方向/距离与视频严重不符。</td></tr>
-        <tr><td>3分</td><td>空间感基本合理，但定位略显模糊或不稳定。</td></tr>
-        <tr><td>4分</td><td>空间定位准确，大致符合视频中的声源位置。</td></tr>
-        <tr><td>5分</td><td>空间一致性极高，定位精准，沉浸感强。</td></tr>
-      </table>
-
-      <strong>🧠 语义一致性（Semantic Consistency）</strong><br>
-      衡量音频内容是否准确表达视频中的事件或动作语义（如敲门声、说话、狗叫）。
-      <table>
-        <tr><th>分数</th><th>评分标准</th></tr>
-        <tr><td>1分</td><td>与视频内容完全不符，甚至产生误导语义。</td></tr>
-        <tr><td>2分</td><td>存在较大语义偏差，无法准确传达视频含义。</td></tr>
-        <tr><td>3分</td><td>大致匹配视频语义，但存在模糊或轻度偏差。</td></tr>
-        <tr><td>4分</td><td>语义表达清晰，基本与视频一致。</td></tr>
-        <tr><td>5分</td><td>与视频事件高度匹配，表达准确自然。</td></tr>
-      </table>
-
-      <strong>⏱️ 时间一致性（Temporal Consistency）</strong><br>
-      衡量音频事件在时间上是否与视频同步，动作与声音是否协调。
-      <table>
-        <tr><th>分数</th><th>评分标准</th></tr>
-        <tr><td>1分</td><td>音频严重提前/滞后，完全不同步。</td></tr>
-        <tr><td>2分</td><td>时间延迟或对齐不稳定，影响观看体验。</td></tr>
-        <tr><td>3分</td><td>时间基本匹配，有少量偏移但可接受。</td></tr>
-        <tr><td>4分</td><td>时间同步较好，仅存在轻微偏差。</td></tr>
-        <tr><td>5分</td><td>时间高度一致，动作与声音完美同步。</td></tr>
-      </table>
-
-      <strong>❤️ 用户总体满意度（User Preference）</strong><br>
-      衡量用户对整体视听体验的主观喜好程度。
-      <table>
-        <tr><th>分数</th><th>评分标准</th></tr>
-        <tr><td>1分</td><td>完全不喜欢，体验非常差。</td></tr>
-        <tr><td>2分</td><td>不太喜欢，有明显问题，不愿再次体验。</td></tr>
-        <tr><td>3分</td><td>一般，部分可接受，整体中等。</td></tr>
-        <tr><td>4分</td><td>喜欢，整体体验良好。</td></tr>
-        <tr><td>5分</td><td>非常喜欢，体验自然流畅。</td></tr>
-      </table>
-    </div>
-    <button id="startButton">开始问卷</button>
-  </div>
-
-  <!-- Main Questionnaire -->
-  <div id="questionnaire" style="display:none;">
-    <h1>四视频主观评分问卷</h1>
-    <div class="rating-criteria-video">
-      <strong>🎧 音频质量（Audio Quality）：</strong>
-      衡量生成音频本身的听感，包括清晰度、自然度、噪声等。
-
-      <strong>🧭 空间一致性（Spatial Consistency）：</strong>
-      衡量音频的空间定位是否与视频中声源位置匹配（如方向、远近、环境感）。<br>
-
-      <strong>🧠 语义一致性（Semantic Consistency）：</strong>
-      衡量音频内容是否准确表达视频中的事件或动作语义（如敲门声、说话、狗叫）。
-
-      <strong>⏱️ 时间一致性（Temporal Consistency）：</strong>
-      衡量音频事件在时间上是否与视频同步，动作与声音是否协调。<br>
-
-      <strong>❤️ 用户总体满意度（User Preference）：</strong>
-      衡量用户对整体视听体验的主观喜好程度。new
-    </div>
-    <br><hr><br>
-    <div id="question-counter"></div>
-
-    <form id="rating-form">
-
-      <!-- 视频 1 -->
-      <div class="video-rating-pair">
-        <video id="video0" width="320" controls></video>
-        <div class="video-rating-block">
-          <h3>视频 1</h3>
-          <div class="question">音频质量：<span class="radio-group" id="audioQuality0"></span></div>
-          <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency0"></span></div>
-          <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency0"></span></div>
-          <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency0"></span></div>
-          <div class="question">用户总体满意度：<span class="radio-group" id="userPreference0"></span></div>
-        </div>
-        <video id="video1" width="320" controls></video>
-        <div class="video-rating-block">
-          <h3>视频 2</h3>
-          <div class="question">音频质量：<span class="radio-group" id="audioQuality1"></span></div>
-          <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency1"></span></div>
-          <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency1"></span></div>
-          <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency1"></span></div>
-          <div class="question">用户总体满意度：<span class="radio-group" id="userPreference1"></span></div>
-        </div>
-      </div>
-
-      <!-- 视频 2
-      <div class="video-rating-pair">
-        
-      </div> -->
-
-      <!-- 视频 3 -->
-      <div class="video-rating-pair">
-        <video id="video2" width="320" controls></video>
-        <div class="video-rating-block">
-          <h3>视频 3</h3>
-          <div class="question">音频质量：<span class="radio-group" id="audioQuality2"></span></div>
-          <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency2"></span></div>
-          <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency2"></span></div>
-          <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency2"></span></div>
-          <div class="question">用户总体满意度：<span class="radio-group" id="userPreference2"></span></div>
-        </div>
-        <video id="video3" width="320" controls></video>
-        <div class="video-rating-block">
-          <h3>视频 4</h3>
-          <div class="question">音频质量：<span class="radio-group" id="audioQuality3"></span></div>
-          <div class="question">空间一致性：<span class="radio-group" id="spatialConsistency3"></span></div>
-          <div class="question">语义一致性：<span class="radio-group" id="semanticConsistency3"></span></div>
-          <div class="question">时间一致性：<span class="radio-group" id="temporalConsistency3"></span></div>
-          <div class="question">用户总体满意度：<span class="radio-group" id="userPreference3"></span></div>
-        </div>
-      </div>
-
-      <!-- 视频 4 -->
-      <!-- <div class="video-rating-pair">
-  
-      </div> -->
-
-      <button type="submit">下一题</button>
-    </form>
-
-    <div id="complete" style="display:none;">
-      <p>评分完成！点击下载：</p>
-      <button onclick="downloadCSV()">下载 CSV</button>
-    </div>
+    <div id="video-grid"></div>
   </div>
 
   <script src="script.js"></script>
