--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>FoleySpace: Vision-Aligned Binaural Spatial Audio Generation</h1>
-    <a href="#" class="code-link" target="_blank">[GitHub Code]</a>
+    <a href="#" class="code-link" target="_blank">GitHub Code</a>
 
     <div id="video-grid"></div>
   </div>
